--- a/.gitignore
+++ b/.gitignore
@@ -138,3 +138,11 @@ html/
 
 ######################### Validation Scripts & Testing #########################
 output*/
+
+######################### Others #########################
+*.avi
+*.jpeg
+*.json
+*.out
+*.png
+*.txt
